# actPoly-monopoly

./: .gitignore  LICENSE  README.md  docker-compose.yaml  example.env
backend/: Dockerfile  pyproject.toml
backend/alembic/: README  env.py
backend/alembic/versions/: 798dd0a2c81c_update_user.py  c2e1e2abbd32_initial_tables.py  dfce500b2721_fixed_user_ondelete.py  fbc41b89de24_added_indexes_to_user.py
backend/app/: main.py  settings.py
backend/app/database/: db_helper.py
backend/app/database/models/: __init__.py  base.py  chance_command.py  company.py  group.py  player.py  property.py  railway.py  special.py  tile.py  user.py
backend/app/game/: __init__.py  api.py  connection_manager.py  game_data_loader.py  game_manager.py  tile_load.py
backend/app/game/data/: __init__.py  card_data.py  tile_data.py
backend/app/user/: api.py  cookie.py  hash.py  schemas.py  tokens.py
backend/app/utils/: __init__.py  exception_handler.py  mail.py
frontend/: jsconfig.json  package-lock.json  package.json
frontend/src/: App.jsx  main.jsx
frontend/src/components/: Footer.jsx  GameComponent.jsx  GameTestComponent.jsx  Header.jsx  LoginModal.jsx  MainContent.jsx  PasswordResetModal.jsx  RegisterModal.jsx
frontend/src/pages/: GamePage.jsx  MainPage.jsx  PasswordResetPage.jsx  UserVerifyPage.jsx  test.jsx
frontend/src/store/: userStore.js
nginx/: entrypoint.sh
nginx/certs/example/: cert.crt  cert.csr  cert.key
nginx/conf/: nginx.conf
